--- a/GreenGardenClient/GreenGardenClient/Views/Common/ResetPassword.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Common/ResetPassword.cshtml
@@ -53,7 +53,8 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-3 ">
                         <div class="site-logo">
-                            <a href="index.html" class="font-weight-bold">
+                            <a href="~/Home" class="font-weight-bold">
+
                                 <img src="~/images/logo.png" alt="Image" class="img-fluid">
                             </a>
                         </div>
