--- a/GreenGardenClient/GreenGardenClient/Views/Service/ComboDetail.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/ComboDetail.cshtml
@@ -50,7 +50,7 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-3 ">
                         <div class="site-logo">
-                            <a href="index.html" class="font-weight-bold">
+                            <a href="~/Home" class="font-weight-bold">
                                 <img src="~/images/logo.jpg" alt="Image" class="img-fluid">
                             </a>
                         </div>
