--- a/GreenGardenClient/GreenGardenClient/Views/Common/Contact.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Common/Contact.cshtml
@@ -9,8 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/fonts/icomoon/style.css">
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
@@ -20,9 +21,6 @@
     <link rel="stylesheet" href="~/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="~/css/aos.css">
     <link rel="stylesheet" href="~/css/style.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js" integrity="sha384-Z4Tj0I8FHTX9nLQZPmQ8J3pP2iVnULB17OvGpyYxIxTnEaEiZ9qZug5lBOu1IRxN" crossorigin="anonymous"></script>
-
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -201,7 +199,7 @@
             <div class="row">
                 <!-- Left Section -->
                 <div class="col-md-8 d-flex flex-column justify-content-center">
-                    <img src="~/images/lienhe.jpg" alt="Authentic Shoes Store" class="store-image mb-4">
+                    <img src="~/images/contact.jpg" alt="Authentic Shoes Store" class="store-image mb-4">
                     <div class="store-info">
                         <h3>Sông quê Green Garden</h3>
                         <p>
