--- a/GreenGardenClient/GreenGardenClient/Views/Service/index.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/index.cshtml
@@ -204,10 +204,10 @@
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
                         <div class="listing-item">
                             <div class="listing-image">
-                                <img src="~/images/picture14.jpg" alt="Đặt ván trượt" class="img-fluid">
+                                <img src="~/images/services/d1.jpg" alt="Đặt ván trượt" class="img-fluid">
                             </div>
                             <div class="listing-item-content">
-                                <a class="px-3 mb-3 category bg-primary" href="#">Đặt Vé</a>
+                                <a class="px-3 mb-3 category bg-primary" href="~/Service/OrderTicket">Đặt Vé</a>
                                 <h2 class="mb-1"><a href="#">Trải nghiệm,thăm quan</a></h2>                               
                             </div>
                         </div>
@@ -217,10 +217,10 @@
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
                         <div class="listing-item">
                             <div class="listing-image">
-                                <img src="~/images/picture14.jpg" alt="Đặt ván trượt" class="img-fluid">
+                                <img src="~/images/services/dichvu3.jpg" alt="Đặt ván trượt" class="img-fluid">
                             </div>
                             <div class="listing-item-content">
-                                <a class="px-3 mb-3 category bg-primary" href="#">Đặt đồ ăn</a>
+                                <a class="px-3 mb-3 category bg-primary" href="~/Service/OrderFoodAndDrink">Đặt đồ ăn</a>
                                 <h2 class="mb-1"><a href="#">Thưởng thức đồ ăn tươi</a></h2>
                             </div>
                         </div>
@@ -230,10 +230,10 @@
                     <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
                         <div class="listing-item">
                             <div class="listing-image">
-                                <img src="~/images/picture14.jpg" alt="Đặt dụng cụ" class="img-fluid">
+                                <img src="~/images/services/dichvu2.jpg" alt="Đặt dụng cụ" class="img-fluid">
                             </div>
                             <div class="listing-item-content">
-                                <a class="px-3 mb-3 category bg-primary" href="#">Đặt dụng cụ</a>
+                                <a class="px-3 mb-3 category bg-primary" href="~/Service/OrderGear">Đặt dụng cụ</a>
                                 <h2 class="mb-1"><a href="#">Trải nghiệm dụng cụ mới</a></h2>
                             </div>
                         </div>
